fix alignment issue- IE

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6103,7 +6103,7 @@ button, html input[type="button"], input[type="reset"], input[type="submit"] {
 
 .home-modal-block-content {
   font-size: inherit;
-  height: 80%;
+  height: 75%;
   position: relative;
 }
 
@@ -6114,7 +6114,7 @@ button, html input[type="button"], input[type="reset"], input[type="submit"] {
 .home-modal-block-footer {
   display: inline-block;
   font-size: inherit;
-  padding: 0.5em 1em 1em 1em;
+  padding: 0.5rem 1rem 1rem 1rem;
   position: relative;
 }
 
@@ -6173,9 +6173,10 @@ button, html input[type="button"], input[type="reset"], input[type="submit"] {
 .team-setup-squad-block .team-setup-squad-icon {
   display: inline-block;
   font-size: inherit;
-  padding: 0 0 0 4em;
+  padding: 1em 0 0 4em;
   position: relative;
   width: 22%;
+  height: 14.5rem;
 }
 
 .team-setup-squad-icon > h {
@@ -6183,22 +6184,22 @@ button, html input[type="button"], input[type="reset"], input[type="submit"] {
   font-size: inherit;
   font-weight: bold;
   left: -2em;
-  padding: 1em 0 0.5em;
+  padding: 1rem 0 0;
   position: relative;
 }
 
 .team-setup-squad-block .team-setup-squad-icon-change {
   left: 27.25%;
-  height: 23%;
-  position: absolute;
-  top: 52%;
+  height: 8.5rem;
+  position: relative;
   width: 5%;
+  top: 1.8rem;
 }
 
 .team-setup-squad-block .team-setup-squad-content {
   display: inline-block;
   font-size: inherit;
-  height: 95%;
+  height: 100%;
   left: 39%;
   position: absolute;
   top: 0;
@@ -6209,8 +6210,9 @@ button, html input[type="button"], input[type="reset"], input[type="submit"] {
   display: inline-block;
   font-size: inherit;
   position: relative;
-  top: 13%;
+  top: 3.5rem;
   width: 95%;
+  font-size: 1.5rem;
 }
 
 .team-setup-squad-content .squad-parent > select:first-of-type, .team-setup-squad-content .squad-parent > span:first-of-type {
@@ -6223,25 +6225,22 @@ button, html input[type="button"], input[type="reset"], input[type="submit"] {
 .team-setup-squad-content .squad-name {
   display: inline-block;
   font-size: inherit;
-  height: 33%;
-  position: relative;
-  top: 15%;
   width: 95%;
 }
 
 .team-setup-squad-content .squad-name > h {
   color: #464646;
-  font-size: 1.2em;
+  font-size: 1.6rem;
   position: absolute;
-  top: 50%;
+  top: 16.4rem;
   transform: translate(0px, -50%);
 }
 
 .team-setup-squad-content .squad-add-child {
-  display: inline-block;
+  display: block;
   font-size: inherit;
-  position: relative;
-  top: 17%;
+  position: absolute;
+  top: 22.8rem;
   width: 95%;
 }
 
@@ -6266,6 +6265,7 @@ button, html input[type="button"], input[type="reset"], input[type="submit"] {
 .home-modal-block-close-btn svg, .team-setup-squad-icon svg {
   height: inherit;
   width: inherit;
+  display: block;
 }
 
 .home-modal-block-close-btn polygon {
@@ -6278,7 +6278,7 @@ button, html input[type="button"], input[type="reset"], input[type="submit"] {
   height: 3%;
   left: 35%;
   position: absolute;
-  top: 13%;
+  top: 4rem;
   width: 1.4%;
 }
 
@@ -6295,7 +6295,7 @@ button, html input[type="button"], input[type="reset"], input[type="submit"] {
   height: 3%;
   left: 35%;
   position: absolute;
-  top: 47%;
+  top: 15.8rem;
   width: 1.4%;
 }
 
@@ -6312,7 +6312,7 @@ button, html input[type="button"], input[type="reset"], input[type="submit"] {
   height: 3%;
   left: 35%;
   position: absolute;
-  top: 67%;
+  top: 23rem;
   width: 1.4%;
 }
 
@@ -6352,15 +6352,16 @@ button, html input[type="button"], input[type="reset"], input[type="submit"] {
   padding: 3em 0 0 4em;
   position: relative;
   width: 22%;
+  height: 14.5rem;
 }
 
 .team-setup-block .team-setup-icon-child {
   display: inline-block;
-  height: 19%;
-  left: -5%;
+  height: 8.5rem;
+  left: -5.3%;  
   position: relative;
-  top: 16.5%;
-  width: 5%;
+  top: 8.5rem;
+  width: 5.3%;
 }
 
 .team-setup-block .team-setup-icon-arrow-top {
@@ -6385,7 +6386,7 @@ button, html input[type="button"], input[type="reset"], input[type="submit"] {
   height: 3%;
   left: 33%;
   position: absolute;
-  top: 32%;
+  top: 15.8rem;
   width: 1.4%;
 }
 
@@ -6402,7 +6403,7 @@ button, html input[type="button"], input[type="reset"], input[type="submit"] {
   height: 3%;
   left: 33%;
   position: absolute;
-  top: 48.5%;
+  top: 24.3rem;
   width: 1.4%;
 }
 
@@ -6427,7 +6428,7 @@ button, html input[type="button"], input[type="reset"], input[type="submit"] {
   display: inline-block;
   font-size: inherit;
   position: absolute;
-  top: 7%;
+  top: 3.5rem;
   width: 95%;
 }
 
@@ -6443,16 +6444,16 @@ button, html input[type="button"], input[type="reset"], input[type="submit"] {
   color: #464646;
   font-size: 1.2em;
   position: absolute;
-  top: 50%;
+  top: 6rem;
   transform: translate(0px, -50%);
 }
 
 .team-setup-content .team-setup-child-select {
   display: inline-block;
   font-size: inherit;
-  height: 32%;
+  height: 15rem;
   position: absolute;
-  top: 48.5%;
+  top: 24rem;
   width: 95%;
 }
 
@@ -6508,8 +6509,9 @@ button, html input[type="button"], input[type="reset"], input[type="submit"] {
   font-size: inherit;
   height: 20%;
   position: absolute;
-  top: 81%;
+  top: 38rem;
   width: 95%;
+  padding-top: 1rem;
 }
 
 .team-setup-squad-revert .team-setup-revert-icon {
@@ -6519,6 +6521,7 @@ button, html input[type="button"], input[type="reset"], input[type="submit"] {
   padding-right: 0.5em;
   position: relative;
   width: 5%;
+  top: 0.3rem;
 }
 
 .team-setup-revert-icon.disabled {
